...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_topic"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_activity1"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:text="@string/num_1"
        app:layout_constraintBottom_toTopOf="@+id/button_activity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_progress"
        app:layout_constraintVertical_chainStyle="packed" />

...
