...
        android:id="@+id/button_grammar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/grammar"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_vocab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_topic"
        app:layout_constraintVertical_chainStyle="packed" />

...
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/vocab"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_grammar" />

    <Button
...
